--- a/rpt/patient_clinical_sheet_ver3_subreport_Operation.jrxml
+++ b/rpt/patient_clinical_sheet_ver3_subreport_Operation.jrxml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.15.0.final using JasperReports Library version 6.15.0-dd49bfb94918336b8321d5507193f0169ead4e95  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="patient_clinical_sheet_ver3_subreport_Operation" pageWidth="535" pageHeight="802" whenNoDataType="NoPages" columnWidth="535" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" resourceBundle="patient_clinical_sheet_ver3_subreport_Operation" whenResourceMissingType="Key" uuid="d6f1bf8b-21af-4912-a4bc-00fb5778aa83">
+<!-- Created with Jaspersoft Studio version 6.16.0.final utlizzo versione della libreria JasperReports6.16.0-48579d909b7943b64690c65c71e07e0b80981928  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="patient_clinical_sheet_ver3_subreport_Operation" pageWidth="455" pageHeight="102" orientation="Landscape" whenNoDataType="NoPages" columnWidth="455" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" resourceBundle="patient_clinical_sheet_ver3_subreport_Operation" whenResourceMissingType="Key" uuid="d6f1bf8b-21af-4912-a4bc-00fb5778aa83">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
+	<property name="com.jaspersoft.studio.unit." value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
@@ -42,9 +51,10 @@ WHERE ($P{type} like 'Opd%' AND OPER_OPD_ID = $P{id})
 		<band splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="93" splitType="Stretch">
+		<band height="102" splitType="Stretch">
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<textField pattern="" isBlankWhenNull="false">
-				<reportElement key="textField" x="127" y="32" width="398" height="17" forecolor="#000000" backcolor="#FFFFFF" uuid="b668f4b7-66e5-4a77-89aa-04987a4c6b60"/>
+				<reportElement key="textField" x="127" y="32" width="328" height="17" forecolor="#000000" backcolor="#FFFFFF" uuid="b668f4b7-66e5-4a77-89aa-04987a4c6b60"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -70,7 +80,9 @@ WHERE ($P{type} like 'Opd%' AND OPER_OPD_ID = $P{id})
 				<textFieldExpression><![CDATA[$R{Result}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
-				<reportElement key="textField" x="127" y="0" width="398" height="17" forecolor="#000000" backcolor="#FFFFFF" uuid="53c25872-0e43-46e9-a15b-03d0ff1158f0"/>
+				<reportElement key="textField" x="127" y="0" width="328" height="17" forecolor="#000000" backcolor="#FFFFFF" uuid="53c25872-0e43-46e9-a15b-03d0ff1158f0">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -95,8 +107,8 @@ WHERE ($P{type} like 'Opd%' AND OPER_OPD_ID = $P{id})
 				</textElement>
 				<textFieldExpression><![CDATA[$R{OperationDate}]]></textFieldExpression>
 			</textField>
-			<textField pattern="" isBlankWhenNull="false">
-				<reportElement key="textField" x="127" y="64" width="398" height="17" forecolor="#000000" backcolor="#FFFFFF" uuid="e5fd1021-d934-4a8a-a73e-9e18b2150568"/>
+			<textField textAdjust="StretchHeight" pattern="" isBlankWhenNull="false">
+				<reportElement key="textField" x="127" y="64" width="328" height="17" forecolor="#000000" backcolor="#FFFFFF" uuid="e5fd1021-d934-4a8a-a73e-9e18b2150568"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -122,7 +134,7 @@ WHERE ($P{type} like 'Opd%' AND OPER_OPD_ID = $P{id})
 				<textFieldExpression><![CDATA[$R{Remarks}]]></textFieldExpression>
 			</textField>
 			<textField pattern="" isBlankWhenNull="false">
-				<reportElement key="textField" x="127" y="48" width="398" height="17" forecolor="#000000" backcolor="#FFFFFF" uuid="ce7af26e-a625-44d7-ac7b-bc7612baf87e"/>
+				<reportElement key="textField" x="127" y="48" width="328" height="17" forecolor="#000000" backcolor="#FFFFFF" uuid="ce7af26e-a625-44d7-ac7b-bc7612baf87e"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -148,7 +160,7 @@ WHERE ($P{type} like 'Opd%' AND OPER_OPD_ID = $P{id})
 				<textFieldExpression><![CDATA[$R{Trans.Unit}]]></textFieldExpression>
 			</textField>
 			<textField pattern="" isBlankWhenNull="false">
-				<reportElement key="textField" x="127" y="16" width="398" height="17" forecolor="#000000" backcolor="#FFFFFF" uuid="96455db0-2dc2-4fc1-82dd-7c56e9f51d90"/>
+				<reportElement key="textField" x="127" y="16" width="328" height="17" forecolor="#000000" backcolor="#FFFFFF" uuid="96455db0-2dc2-4fc1-82dd-7c56e9f51d90"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
