Fix static parameters in one report

--- a/rpt/MOH717_Monthly_Workload_Report_for_Hospitals_page2.jrxml
+++ b/rpt/MOH717_Monthly_Workload_Report_for_Hospitals_page2.jrxml
@@ -23,24 +23,24 @@ FROM (
 	FROM ADMISSION
 	WHERE ADM_WRD_ID_A IN ('I','S')
 	  AND ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_DIST_ID_A in ('EQ')) Disc1,
 
 	(SELECT count(*) paeDisc
 	FROM ADMISSION
 	WHERE ADM_WRD_ID_A IN ('P')
 	  AND ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_DIST_ID_A in ('EQ')) Disc2,
 
 	(SELECT count(*) matDisc
 	FROM ADMISSION
 	WHERE ADM_WRD_ID_A IN ('M','N')
 	  AND ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_DIST_ID_A in ('EQ')
 	  AND ADM_PRG_DRT_ID_A is not null) Disc3,
 
@@ -48,8 +48,8 @@ FROM (
 	FROM ADMISSION
 	WHERE ADM_WRD_ID_A IN ('Z')
 	  AND ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_DIST_ID_A in ('EQ')
 	  AND ADM_PRG_DRT_ID_A is null) Disc4,
 
@@ -57,24 +57,24 @@ FROM (
 	FROM ADMISSION
 	WHERE ADM_WRD_ID_A IN ('I','S')
 	  AND ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_DIST_ID_A in ('D')) Death1,
 
 	(SELECT count(*) paeDeath
 	FROM ADMISSION
 	WHERE ADM_WRD_ID_A IN ('P')
 	  AND ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_DIST_ID_A in ('D')) Death2,
 
 	(SELECT count(*) matDeath
 	FROM ADMISSION
 	WHERE ADM_WRD_ID_A IN ('M','N')
 	  AND ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_DIST_ID_A in ('D')
 	  AND ADM_PRG_DRT_ID_A is not null) Death3,
 
@@ -82,8 +82,8 @@ FROM (
 	FROM ADMISSION
 	WHERE ADM_WRD_ID_A IN ('Z')
 	  AND ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_DIST_ID_A in ('D')
 	  AND ADM_PRG_DRT_ID_A is null) Death4,
 
@@ -91,24 +91,24 @@ FROM (
 	FROM ADMISSION
 	WHERE ADM_WRD_ID_A IN ('I','S')
 	  AND ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_DIST_ID_A in ('ES')) Escape1,
 
 	(SELECT count(*) paeEscape
 	FROM ADMISSION
 	WHERE ADM_WRD_ID_A IN ('P')
 	  AND ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_DIST_ID_A in ('ES')) Escape2,
 
 	(SELECT count(*) matEscape
 	FROM ADMISSION
 	WHERE ADM_WRD_ID_A IN ('M','N')
 	  AND ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_DIST_ID_A in ('ES')
 	  AND ADM_PRG_DRT_ID_A is not null) Escape3,
 
@@ -116,36 +116,36 @@ FROM (
 	FROM ADMISSION
 	WHERE ADM_WRD_ID_A IN ('Z')
 	  AND ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_DIST_ID_A in ('ES')
 	  AND ADM_PRG_DRT_ID_A is null) Escape4,
 
 	(SELECT count(*) genAdm
 	FROM ADMISSION
 	WHERE ADM_WRD_ID_A IN ('I','S')
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006) Adm1,
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}) Adm1,
 
 	(SELECT count(*) paeAdm
 	FROM ADMISSION
 	WHERE ADM_WRD_ID_A IN ('P')
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006) Adm2,
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}) Adm2,
 
 	(SELECT count(*) matAdm
 	FROM ADMISSION
 	WHERE ADM_WRD_ID_A IN ('M','N')
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_DIST_ID_A in ('EQ')
 	  AND ADM_PRG_DRT_ID_A is not null) Adm3,
 
 	(SELECT count(*) amnAdm
 	FROM ADMISSION
 	WHERE ADM_WRD_ID_A IN ('Z')
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_DIST_ID_A in ('EQ')
 	  AND ADM_PRG_DRT_ID_A is null) Adm4,
 
@@ -153,40 +153,40 @@ FROM (
 	FROM ADMISSION A LEFT JOIN PATIENT P ON ADM_PAT_ID = PAT_ID
 	WHERE P.PAT_ESTA in ('Y')
 	  AND A.ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_WRD_ID_A IN ('I','S')) bedDays1,
 
 	(SELECT IFNULL(SUM(DATEDIFF(ADM_DATE_DIS,ADM_DATE_ADM)),0) genBedDays
 	FROM ADMISSION A LEFT JOIN PATIENT P ON ADM_PAT_ID = PAT_ID
 	WHERE P.PAT_ESTA in ('N', 'U')
 	  AND A.ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_WRD_ID_A IN ('I','S')) bedDays2,
 
 	(SELECT IFNULL(SUM(DATEDIFF(ADM_DATE_DIS,ADM_DATE_ADM)),0) paeBedDaysNHIF
 	FROM ADMISSION A LEFT JOIN PATIENT P ON ADM_PAT_ID = PAT_ID
 	WHERE P.PAT_ESTA in ('Y')
 	  AND A.ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_WRD_ID_A IN ('P')) bedDays3,
 
 	(SELECT IFNULL(SUM(DATEDIFF(ADM_DATE_DIS,ADM_DATE_ADM)),0) paeBedDays
 	FROM ADMISSION A LEFT JOIN PATIENT P ON ADM_PAT_ID = PAT_ID
 	WHERE P.PAT_ESTA in ('N', 'U')
 	  AND A.ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_WRD_ID_A IN ('P')) bedDays4,
 
 	(SELECT IFNULL(SUM(DATEDIFF(ADM_DATE_DIS,ADM_DATE_ADM)),0) matBedDaysNHIF
 	FROM ADMISSION A LEFT JOIN PATIENT P ON A.ADM_PAT_ID = P.PAT_ID
 	WHERE P.PAT_ESTA in ('Y')
 	  AND A.ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_WRD_ID_A IN ('M','N')
 	  AND ADM_PRG_DRT_ID_A is not null) bedDays5,
 
@@ -194,8 +194,8 @@ FROM (
 	FROM ADMISSION A LEFT JOIN PATIENT P ON ADM_PAT_ID = PAT_ID
 	WHERE P.PAT_ESTA in ('N', 'U')
 	  AND A.ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_WRD_ID_A IN ('M','N')
 	  AND ADM_PRG_DRT_ID_A is not null) bedDays6,
 
@@ -203,8 +203,8 @@ FROM (
 	FROM ADMISSION A LEFT JOIN PATIENT P ON A.ADM_PAT_ID = P.PAT_ID
 	WHERE P.PAT_ESTA in ('Y')
 	  AND A.ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_WRD_ID_A IN ('Z')
 	  AND ADM_PRG_DRT_ID_A is null) bedDays7,
 
@@ -212,8 +212,8 @@ FROM (
 	FROM ADMISSION A LEFT JOIN PATIENT P ON ADM_PAT_ID = PAT_ID
 	WHERE P.PAT_ESTA in ('N', 'U')
 	  AND A.ADM_DATE_DIS is not null
-	  AND MONTH(ADM_DATE_DIS) = 10
-	  AND YEAR(ADM_DATE_DIS) = 2006
+	  AND MONTH(ADM_DATE_DIS) = $P{month}
+	  AND YEAR(ADM_DATE_DIS) = $P{year}
 	  AND ADM_WRD_ID_A IN ('Z')
 	  AND ADM_PRG_DRT_ID_A is null) bedDays8,
 
