Rollback unwanted changes

--- a/rpt/patient_clinical_sheet_ver3.jrxml
+++ b/rpt/patient_clinical_sheet_ver3.jrxml
@@ -28,7 +28,7 @@
 		<![CDATA[SELECT TYPE, DATE, IDS, NOTE, DETAILS_1, DETAILS_2, DETAILS_3, DETAILS_4
 FROM (
 	SELECT CONCAT("Opd", " (", OPD_PROG_YEAR, ")") AS TYPE,
-	   OPD_DATE_VIS AS DATE, OPD_ID AS IDS,
+	   OPD_DATE AS DATE, OPD_ID AS IDS,
 	   IF(OPD_NEW_PAT='N','New Attendance','Re-Attendance') AS DETAILS_1,
 	   CONCAT((SELECT DIS_DESC FROM DISEASE WHERE DIS_ID_A = OPD_DIS_ID_A)) AS DETAILS_2,
 	   CONCAT(" + ", (SELECT DIS_DESC FROM DISEASE WHERE DIS_ID_A = OPD_DIS_ID_A_2), " & ", (SELECT DIS_DESC FROM DISEASE WHERE DIS_ID_A = OPD_DIS_ID_A_3)) AS DETAILS_3,
@@ -37,7 +37,7 @@ FROM (
 	FROM 
 		OPD 
 		LEFT JOIN PATIENT ON (OPD_PAT_ID = PAT_ID) 
-	WHERE OPD_PAT_ID = $P{patientID} AND (DATE(OPD_DATE_VIS) BETWEEN $P{Date_from} AND $P{Date_to})
+	WHERE OPD_PAT_ID = $P{patientID} AND (DATE(OPD_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
 	
 UNION
 
@@ -129,7 +129,7 @@ UNION
 UNION
 
 	SELECT "Laboratory" AS TYPE,
-	   LAB_EXAM_DATE AS DATE, LAB_RES AS IDS,
+	   LAB_DATE AS DATE, LAB_RES AS IDS,
 	   EXA_DESC DETAILS_1,
 	   LAB_RES AS DETAILS_2,
 	   "" AS DETAILS_3,
@@ -139,13 +139,13 @@ UNION
 		LABORATORY  
 		LEFT JOIN EXAM ON (EXA_ID_A = LAB_EXA_ID_A) 
 		LEFT JOIN LABORATORYROW ON LABR_LAB_ID = LAB_ID
-	WHERE LAB_PAT_ID = $P{patientID} AND (DATE(LAB_EXAM_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
+	WHERE LAB_PAT_ID = $P{patientID} AND (DATE(LAB_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
     AND EXA_PROC = 1
     
 UNION
 
 	SELECT "Laboratory" AS TYPE,
-	   LAB_EXAM_DATE AS DATE, LAB_ID AS IDS,
+	   LAB_DATE AS DATE, LAB_ID AS IDS,
 	   EXA_DESC DETAILS_1,
 	   GROUP_CONCAT(LABR_DESC SEPARATOR ", " ) AS DETAILS_2,
 	   "" AS DETAILS_3,
@@ -155,14 +155,14 @@ UNION
 		LABORATORY  
 		LEFT JOIN EXAM ON (EXA_ID_A = LAB_EXA_ID_A) 
 		LEFT JOIN LABORATORYROW ON LABR_LAB_ID = LAB_ID
-	WHERE LAB_PAT_ID = $P{patientID} AND (DATE(LAB_EXAM_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
+	WHERE LAB_PAT_ID = $P{patientID} AND (DATE(LAB_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
 	AND EXA_PROC = 2
 GROUP BY LABR_LAB_ID
 
 UNION
 
 	SELECT "Laboratory" AS TYPE,
-	   LAB_EXAM_DATE AS DATE, LAB_RES AS IDS,
+	   LAB_DATE AS DATE, LAB_RES AS IDS,
 	   EXA_DESC DETAILS_1,
 	   LAB_RES AS DETAILS_2,
 	   "" AS DETAILS_3,
@@ -172,7 +172,7 @@ UNION
 		LABORATORY  
 		LEFT JOIN EXAM ON (EXA_ID_A = LAB_EXA_ID_A) 
 		LEFT JOIN LABORATORYROW ON LABR_LAB_ID = LAB_ID
-	WHERE LAB_PAT_ID = $P{patientID} AND (DATE(LAB_EXAM_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
+	WHERE LAB_PAT_ID = $P{patientID} AND (DATE(LAB_DATE) BETWEEN $P{Date_from} AND $P{Date_to})
     AND EXA_PROC = 3
     
 ) 
