--- a/rpt/patient_clinical_sheet_ver3.jrxml
+++ b/rpt/patient_clinical_sheet_ver3.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.16.0.final utlizzo versione della libreria JasperReports6.16.0-48579d909b7943b64690c65c71e07e0b80981928  -->
+<!-- Created with Jaspersoft Studio version 6.16.0.final using JasperReports Library version 6.16.0-48579d909b7943b64690c65c71e07e0b80981928  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="patient_clinical_sheet_ver3" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" resourceBundle="patient_clinical_sheet_ver3" whenResourceMissingType="Key" uuid="9d971b4c-5fa3-4819-adfb-28dfac75b382">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
@@ -45,7 +45,7 @@ UNION
 	   ADM_DATE_ADM AS DATE, ADM_ID AS IDS,
 	   WRD_NAME AS DETAILS_1,
 	   (SELECT DIS_DESC FROM DISEASE WHERE DIS_ID_A = ADM_IN_DIS_ID_A) AS DETAILS_2,
-	   CONCAT(DIST_DESC, " - ", (SELECT DIS_DESC FROM DISEASE WHERE DIS_ID_A = ADM_OUT_DIS_ID_A), " - ", DATE_FORMAT(ADM_DATE_DIS, '%d/%m/%Y')) AS DETAILS_3,
+	   CONCAT(DIST_DESC, " - ", (SELECT DIS_DESC FROM DISEASE WHERE DIS_ID_A = ADM_OUT_DIS_ID_A), " - ", DATE_FORMAT(ADM_DATE_DIS, '%d/%m/%Y %H:%i')) AS DETAILS_3,
 	   "" AS DETAILS_4,
 	   ADM_NOTE AS NOTE
 	FROM 
@@ -343,7 +343,7 @@ ORDER BY DATE DESC]]>
 			<printWhenExpression><![CDATA[!($F{TYPE}.equals( "Operations" ) && $P{All}) 
 && !($F{TYPE}.equals( "Operations" ) && $P{Admission}) 
 && !($F{TYPE}.equals( "Operations" ) && $P{Opd})]]></printWhenExpression>
-			<textField textAdjust="ScaleFont" pattern="dd/MM/yyyy HH:mm" isBlankWhenNull="true">
+			<textField textAdjust="ScaleFont" pattern="dd/MM/yyyy" isBlankWhenNull="true">
 				<reportElement key="textField-1" x="0" y="21" width="70" height="13" uuid="e8b6c04a-0d0d-4fab-87b2-fde877b88b93"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -419,6 +419,19 @@ ORDER BY DATE DESC]]>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "patient_clinical_sheet_ver3_subreport_Operation.jasper"]]></subreportExpression>
 			</subreport>
+			<textField textAdjust="ScaleFont" pattern="HH:mm" isBlankWhenNull="true">
+				<reportElement key="textField-1" x="0" y="34" width="70" height="13" uuid="294e84bf-c024-4d98-b169-ecdaf3cc470d"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Right">
+					<font isBold="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{DATE}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<columnFooter>
